# didcomm-rust

./: .gitignore  Cargo.toml  README.md  didcomm-rust.code-workspace
.github/workflows/: build.yml  release.yml  verify.yml
Specs/DidcommSDK/0.3.1/: DidcommSDK.podspec
Specs/DidcommSDK/0.3.2/: DidcommSDK.podspec
Specs/DidcommSDK/0.3.3/: DidcommSDK.podspec
Specs/DidcommSDK/0.3.4/: DidcommSDK.podspec
Specs/didcomm-swift/0.3.1/: DidcommSDK.podspec  didcomm-swift.podspec
benches/: pack_encrypted.rs  pack_signed.rs
docs/: release.md
examples/: advanced_params.rs  attachments.rs  basic.rs  multi_recipient.rs  non_repudiable_encryption.rs  plaintext.rs  repudiable_authenticated_encryption.rs  repudiable_non_authenticated_encryption.rs  rotate_did.rs  routing.rs  signed_unencrypted.rs
ffi/: Cargo.toml  README.md
ffi/src/: common.rs  did_resolver.rs  didcomm.udl  lib.rs  secrets_resolver.rs
ffi/src/did/: did_resolver.rs  did_resolver_adapter.rs  mod.rs
ffi/src/did/resolvers/: example.rs  mod.rs
ffi/src/message/: mod.rs  pack_encrypted.rs  pack_plaintext.rs  pack_signed.rs  test_helper.rs  unpack.rs
ffi/src/secrets/: mod.rs  secrets_resolver.rs  secrets_resolver_adapter.rs
ffi/src/secrets/resolvers/: example.rs  mod.rs
ffi/src/test_vectors/: common.rs  mod.rs
ffi/src/test_vectors/did_doc/: alice.rs  bob.rs  mod.rs
ffi/src/test_vectors/secrets/: alice.rs  bob.rs  mod.rs
src/: algorithms.rs  authcrypt.rs  error.rs  jwk.rs  lib.rs  pack.rs  pack_encrypted.rs  pack_plaintext.rs  pack_signed.rs  sign.rs  unpack.rs
src/authcrypt/: compose.rs  decrypt.rs  envelope.rs  mod.rs  parse.rs
src/did/: did_doc.rs  did_resolver.rs  mod.rs
src/did/resolvers/: example.rs  mock.rs  mod.rs
src/jwe/: compose.rs  decrypt.rs  encrypt.rs  envelope.rs  mod.rs  parse.rs
src/jws/: envelope.rs  mod.rs  parse.rs  sign.rs  verify.rs
src/message/: attachment.rs  from_prior.rs  message.rs  mod.rs  pack_encrypted.rs  pack_from_prior.rs  pack_plaintext.rs  pack_signed.rs  unpack.rs
src/message/from_prior/: mod.rs  pack.rs  unpack.rs
src/message/pack_encrypted/: anoncrypt.rs  authcrypt.rs  mod.rs
src/message/unpack/: anoncrypt.rs  authcrypt.rs  mod.rs  plaintext.rs  sign.rs
src/protocols/: mod.rs  routing.rs
src/protocols/routing/: forward.rs  mod.rs
src/secrets/: did_secrets.rs  did_secrets_resolver.rs  mod.rs
src/secrets/resolvers/: example.rs  mod.rs
src/test_vectors/: common.rs  encrypted.rs  from_prior.rs  from_prior_jwt.rs  message.rs  mod.rs  plaintext.rs  signed.rs
src/test_vectors/did_doc/: alice.rs  bob.rs  charlie.rs  mediator1.rs  mediator2.rs  mediator3.rs  mod.rs
src/test_vectors/secrets/: alice.rs  bob.rs  charlie.rs  charlie_rotated_to_alice.rs  mediator1.rs  mediator2.rs  mediator3.rs  mod.rs
src/utils/: base64.rs  crypto.rs  did.rs  mod.rs  serde.rs  utils.rs
uniffi/: .gitignore  Cargo.toml  README.md  build.rs
uniffi/src/: common.rs  didcomm.udl  lib.rs  message.rs  test_helper.rs
uniffi/src/did/: did_resolver.rs  did_resolver_adapter.rs  mod.rs
uniffi/src/did/resolvers/: example.rs
uniffi/src/didcomm/: from_prior.rs  mod.rs  pack_encrypted.rs  pack_plaintext.rs  pack_signed.rs  unpack.rs
uniffi/src/didcomm/protocols/routing/: mod.rs
uniffi/src/message/: from_prior.rs  message.rs  mod.rs  pack_encrypted.rs  pack_plaintext.rs  pack_signed.rs  test_helper.rs  unpack.rs
uniffi/src/protocols/routing/: mod.rs
uniffi/src/secrets/: kms.rs  kms_adapter.rs  mod.rs  secrets_resolver.rs  secrets_resolver_adapter.rs
uniffi/src/secrets/resolvers/: example.rs  mod.rs
uniffi/src/test_vectors/: common.rs  mod.rs  test_helper.rs
uniffi/src/test_vectors/did_doc/: alice.rs  bob.rs  charlie.rs  mediator1.rs  mediator2.rs  mediator3.rs  mod.rs
uniffi/src/test_vectors/secrets/: alice.rs  bob.rs  charlie.rs  charlie_rotated_to_alice.rs  mediator1.rs  mediator2.rs  mediator3.rs  mod.rs
wasm/: Cargo.toml  Makefile  README.md
wasm/demo/: .eslintrc.js  package-lock.json  package.json  tslint.json
wasm/demo/src/: advanced-params.ts  attachments.ts  main.ts  test-vectors.ts
wasm/src/: did_resolver.rs  error.js  error.rs  lib.rs  secrets_resolver.rs
wasm/src/did/: did_doc.rs  did_resolver.rs  mod.rs
wasm/src/message/: mod.rs  pack_encrypted.rs  pack_plaintext.rs  pack_signed.rs  unpack.rs
wasm/src/message/from_prior/: mod.rs  pack.rs  unpack.rs
wasm/src/message/protocols/: mod.rs
wasm/src/message/protocols/routing/: mod.rs
wasm/src/secrets/: kms.rs  mod.rs  secret.rs  secrets_resolver.rs
wasm/tests-js/: .eslintrc.js  jest.config.js  jest.config.node.js  jest.config.puppeteer.js  package-lock.json  package.json
wasm/tests-js/src/: errors.test.ts  message.new.test.ts  message.pack-plaintext.test.ts  message.pack-signed.test.ts  message.test.ts
wasm/tests-js/src/forward/: try-parse-forward.test.ts  wrap-in-forward.test.ts
wasm/tests-js/src/from_prior/: new.test.ts  pack.test.ts  unpack.test.ts
wasm/tests-js/src/message/: errors.test.ts  new.test.ts  pack-encrypted.anoncrypt.test.ts  pack-encrypted.authcrypt.test.ts  pack-plaintext.test.ts  pack-signed.test.ts  unpack.test.ts
wasm/tests-js/src/test-vectors/: common.ts  did_resolver.ts  from_prior.ts  from_prior_jwt.ts  index.ts  kms.ts  message.ts  plaintext.ts  secret.ts  secrets_resolver.ts
wasm/tests-js/src/test-vectors/did_doc/: alice.ts  bob.ts  charlie.ts  index.ts
wasm/tests-js/src/test-vectors/secrets/: alice.ts  bob.ts  charlie.ts  charlie_rotated_to_alice.ts  index.ts
wrappers/swift/: README.md  didcomm.swiftdoc  didcomm.swiftsourceinfo
wrappers/swift/didcomm/: didcomm.swift  didcomm.swiftmodule  didcommFFI.h  didcommFFI.modulemap  libdidcomm.dylib
wrappers/swift/examples/: README.md
wrappers/swift/examples/DidcommExampleiOS/: Podfile
wrappers/swift/examples/DidcommExampleiOS/DidcommExampleiOS/: AppDelegate.swift  Constants.swift  ViewController.swift
wrappers/swift/examples/DidcommExampleiOS/DidcommExampleiOS.xcodeproj/: project.pbxproj
