[package]
name = 'didcomm'
version = '0.2.0'
authors = ['Vyacheslav Gudkov <vyacheslav.gudkov@dsr-corporation.com>']
edition = '2018'
description = 'DIDComm for Rust'
license = 'Apache-2.0'
repository = 'https://github.com/sicpa-dlab/didcomm-rust'
readme = 'README.md'

[dependencies]
anyhow = '1.0'
base64 = '0.13'
async-trait = '0.1'
thiserror = '1.0'
serde_json = '1.0'
serde-enum-str = '0.1'
sha2 = '0.9'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.askar-crypto]
version = '0.2'
features = ['std']
git = 'https://github.com/hyperledger/aries-askar'
rev = '4f29d43d584c4a1f1f982c4511824421aeccd2db'

[dev-dependencies]
lazy_static = '1.4.0'

[dev-dependencies.tokio]
version = '1.9'
features = [
    'rt',
    'macros',
]

[dev-dependencies.criterion]
version = '0.3'
features = ['async_futures']

[[bench]]
name = "pack_signed"
harness = false

[[bench]]
name = "pack_encrypted"
harness = false

[[example]]
name = "basic"

