[package]
name = 'didcomm-ffi'
version = '0.2.0'
authors = ['Vyacheslav Gudkov <vyacheslav.gudkov@dsr-corporation.com>']
edition = '2018'
description = 'FFI wrapper for DIDComm'
license = 'Apache-2.0'
repository = 'https://github.com/sicpa-dlab/didcomm-rust'

[lib]
crate-type = [
    'cdylib'
]

[dependencies.didcomm]
path = '..'

[dependencies]
uniffi = "0.14"
uniffi_macros = "0.14"
lazy_static = "1.3"
futures = { version = "0.3.17", features = ["thread-pool"] }
num_cpus = "1.8.0"
async-trait = '0.1'
serde_json = '1.0'

[build-dependencies]
uniffi_build = {version = "0.14", features = [ "builtin-bindgen" ]}

