[package]
name = 'didcomm-uniffi'
version = '0.4.1'
authors = ['Vyacheslav Gudkov <vyacheslav.gudkov@dsr-corporation.com>']
edition = '2018'
description = 'FFI wrapper for DIDComm'
license = 'Apache-2.0'
repository = 'https://github.com/sicpa-dlab/didcomm-rust'

[lib]
crate-type = [
    'cdylib'
]

[dependencies.didcomm_core]
path = '..'
features = ['uniffi']
package = "didcomm"

[dev-dependencies.didcomm_core]
path = '..'
features = ['testvectors']
package = "didcomm"

[dependencies]
uniffi_macros = "0.15.2"
uniffi = { version = "0.15.2", features=["builtin-bindgen"] }
lazy_static = "1.3"
futures = { version = "0.3.17", features = ["thread-pool"] }
num_cpus = "1.8.0"
async-trait = '0.1'
serde_json = '1.0'

[dev-dependencies.tokio]
version = '1.9'
features = [
    'rt',
    'macros',
]

[build-dependencies]
uniffi_build = { version = "0.15.2", features=["builtin-bindgen"] }

